tests/invalid/equation_count_mismatch.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "EquationCountMismatch",
    "description": "Two state variables but only one ODE equation"
  },
  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "m", "default": 0.0 },
        "y": { "type": "state", "units": "m", "default": 0.0 },
        "k": { "type": "parameter", "units": "1/s", "default": 1.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": ["k", "y"] }
        }
      ]
    }
  }
}